--- a/BetterDisplay/platformio.ini
+++ b/BetterDisplay/platformio.ini
@@ -8,11 +8,35 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = esp12e
+
+[common_env_data]
+build_flags =
+    -D VERSION=1.0.0
+    -D DEBUG=1
+lib_deps_builtin =
+    SPI
+    Wire
+lib_deps_external = RF24
+        NRFLite
+        LiquidCrystal_I2C
+
+[env:esp12e]
+platform = espressif8266
+board = esp12e
+framework = arduino
+lib_deps =
+    ${common_env_data.lib_deps_builtin}
+    ${common_env_data.lib_deps_external}
+monitor_speed = 115200
+
 [env:nanoatmega328]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-lib_deps = RF24
-            NRFLite
-            161 # SD Lib
-            LiquidCrystal_I2C
+lib_deps =
+    ${common_env_data.lib_deps_builtin}
+    ${common_env_data.lib_deps_external}
+    161 # SD Lib
+monitor_speed = 115200
