--- a/BetterDisplay/platformio.ini
+++ b/BetterDisplay/platformio.ini
@@ -29,6 +29,7 @@ framework = arduino
 lib_deps =
     ${common_env_data.lib_deps_builtin}
     ${common_env_data.lib_deps_external}
+    WifiManager
 monitor_speed = 115200
 
 [env:nanoatmega328]
