--- a/BetterBase/platformio.ini
+++ b/BetterBase/platformio.ini
@@ -12,14 +12,30 @@
 src_dir      = Base
 default_envs = uno
 
+[common]
+default_src_filter = +<src/*> 
+build_flags       = -fmax-errors=5
+                    -g -D__BASE_FIRMWARE__
+                    -fmerge-all-constants
+lib_deps          = DHT sensor library
+                    Adafruit BMP280 Library
+                    RF24
+                    NRFLite
+                    TroykaMQ
+
+# Globally defined properties
+# inherited by all environments
+[env]
+framework         = arduino
+build_flags       = ${common.build_flags}
+lib_deps          = ${common.lib_deps}
+monitor_speed     = 115200
+lib_ldf_mode      = chain+
+
 [env:uno]
-platform = atmelavr
-board = uno
-framework = arduino
-lib_deps = Sleep_n0m1
-            DHT sensor library
-            Adafruit BMP280 Library
-            RF24
-            NRFLite
-            161 # SD Lib
-            TroykaMQ
+platform          = atmelavr
+board             = uno
+lib_deps          = ${common.lib_deps}
+                    Sleep_n0m1
+                    161 # SD Lib
+                    Wire
