Fuck i think i finish

--- a/BetterBase/platformio.ini
+++ b/BetterBase/platformio.ini
@@ -39,3 +39,11 @@ lib_deps          = ${common.lib_deps}
                     Sleep_n0m1
                     161 # SD Lib
                     Wire
+
+[env:mega]
+platform          = atmelavr
+board             = megaatmega2560
+lib_deps          = ${common.lib_deps}
+                    Sleep_n0m1
+                    161 # SD Lib
+                    Wire
