--- a/BetterBase/platformio.ini
+++ b/BetterBase/platformio.ini
@@ -22,6 +22,9 @@ lib_deps          = DHT sensor library
                     RF24
                     NRFLite
                     TroykaMQ
+                    Time
+                    RTC
+                    DS1307RTC
 
 # Globally defined properties
 # inherited by all environments
