--- a/BetterBase/platformio.ini
+++ b/BetterBase/platformio.ini
@@ -33,7 +33,7 @@ framework         = arduino
 build_flags       = ${common.build_flags}
 lib_deps          = ${common.lib_deps}
 monitor_speed     = 115200
-lib_ldf_mode      = chain+
+lib_ldf_mode      = deep+
 
 [env:uno]
 platform          = atmelavr
