Lol that's a lot

--- a/BetterBase/platformio.ini
+++ b/BetterBase/platformio.ini
@@ -17,7 +17,7 @@ default_src_filter = +<src/*>
 build_flags       = -fmax-errors=5
                     -g -D__BASE_FIRMWARE__
                     -fmerge-all-constants
-lib_deps          = DHT sensor library
+lib_deps          = https://github.com/markruys/arduino-DHT
                     Adafruit BMP280 Library
                     RF24
                     NRFLite
@@ -39,14 +39,25 @@ lib_ldf_mode      = deep+
 platform          = atmelavr
 board             = uno
 lib_deps          = ${common.lib_deps}
-                    Sleep_n0m1
-                    161 # SD Lib
+                    #https://github.com/rocketscream/Low-Power
+                    https://github.com/arduino-libraries/SD
+                    #161 # SD Lib
                     Wire
 
 [env:mega]
 platform          = atmelavr
 board             = megaatmega2560
 lib_deps          = ${common.lib_deps}
-                    Sleep_n0m1
-                    161 # SD Lib
+                    #https://github.com/rocketscream/Low-Power
+                    https://github.com/arduino-libraries/SD
+                    #161 # SD Lib
+                    Wire
+
+
+[env:nano]
+platform          = atmelavr
+board             = nanoatmega328
+lib_deps          = ${common.lib_deps}
+                    #161 # SD Lib
+                    https://github.com/arduino-libraries/SD
                     Wire
